--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 </head>
 <body>
   <header class="hero">
-    <h2>Welcome to</h2>
-    <h1>FreshSense</h1>
-    <p>The New Way to Protect Mushroom Farms Using the Power of Smell.</p>
+    <h3>Welcome to</h3>
+    <h1><b>FreshSense</b></h1>
+    <p>Smarter farming through the power of smell.</p>
     <button class="cta">Get Started</button>
   </header>
 
   <section class="features">
-    <div class="feature-card">Feature 1</div>
+    <div class="feature-card">Early Odor-Based Detection System
+    <p>FreshSense uses a smart odor sensor that detects tiny smell 
+      changes caused by mold, bacteria, or contamination before 
+      they become visible. This gives farmers an early warning to 
+      prevent damage.</p>
+    </div>
     <div class="feature-card">Feature 2</div>
     <div class="feature-card">Feature 3</div>
   </section>
