--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <section class="features">
-    <div class="feature-card">Early Odor-Based Detection System
+    <div class="feature-card"><b>Early Odor-Based Detection System</b>
     <p>FreshSense uses a smart odor sensor that detects tiny smell 
       changes caused by mold, bacteria, or contamination before 
       they become visible. This gives farmers an early warning to 
