--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
   </header>
 
   <section class="features">
-    <div class="feature-card"><b>Early Odor-Based Detection System</b>
+    <div class="feature-card"><b><h3>Early Odor-Based Detection System</h3></b>
+    <p>FreshSense uses an advanced odor sensor that can detect extremely small 
+      changes in the air—changes that usually appear hours or even days before 
+      mold, bacteria, or contamination become visible. By identifying these 
+      early warning signs, farmers are given enough time to take action, adjust 
+      conditions, and prevent the spread of harmful microorganisms. This early 
+      detection greatly reduces the chances of losing large portions of 
+      the harvest.</p>
+    </div>
+    <div class="feature-card"><b><h3>Early Odor-Based Detection System</h3></b>
     <p>FreshSense uses a smart odor sensor that detects tiny smell 
       changes caused by mold, bacteria, or contamination before 
       they become visible. This gives farmers an early warning to 
-      prevent damage.</p>
-    </div>
-    <div class="feature-card">Feature 2</div>
+      prevent damage.</p></div>
     <div class="feature-card">Feature 3</div>
   </section>
 
