--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <header class="hero">
-    <h3>Welcome to</h3>
-    <h1><b>FreshSense</b></h1>
+    <h1>
+      <span class="small-title">Welcome To</span><br>
+      <b>FreshSense</b>
+    </h1>
     <p>Smarter farming through the power of smell.</p>
     <button class="cta">Get Started</button>
   </header>
