--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
     <div class="feature-card"><b><h3>Early Odor-Based Detection System</h3></b>
     <p>FreshSense uses an advanced odor sensor that can detect extremely small 
       changes in the air—changes that usually appear hours or even days before 
-      mold, bacteria, or contamination become visible. By identifying these 
-      early warning signs, farmers are given enough time to take action, adjust 
-      conditions, and prevent the spread of harmful microorganisms. This early 
-      detection greatly reduces the chances of losing large portions of 
-      the harvest.</p>
+      mold, bacteria, or contamination become visible.</p>
+      <p> By identifying these early warning signs, farmers are given enough 
+        time to take action, adjust conditions, and prevent the spread of 
+        harmful microorganisms. This early detection greatly reduces the 
+        chances of losing large portions of the harvest.</p>
     </div>
-    <div class="feature-card"><b><h3>Early Odor-Based Detection System</h3></b>
-    <p>FreshSense uses a smart odor sensor that detects tiny smell 
-      changes caused by mold, bacteria, or contamination before 
-      they become visible. This gives farmers an early warning to 
-      prevent damage.</p></div>
+    <div class="feature-card"><b><h3>Real-Time Alerts Through a Mobile App</h3></b>
+    <p>The system is connected to an easy-to-use mobile application that sends 
+      real-time alerts directly to the farmer’s phone whenever something unusual 
+      is detected. These notifications come with clear messages, color indicators,
+      and simple explanations, making it easy for farmers to understand what might
+      be happening in their grow rooms. This allows even new or small-scale growers
+      to respond quickly and confidently without needing deep technical knowledge.</p>
+    </div>
     <div class="feature-card">Feature 3</div>
   </section>
 
