--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="feature-card"><b><h3>Real-Time Alerts Through a Mobile App</h3></b>
     <p>The system is connected to an easy-to-use mobile application that sends 
       real-time alerts directly to the farmer’s phone whenever something unusual 
-      is detected. These notifications come with clear messages, color indicators,
+      is detected.</p>
+    <p>These notifications come with clear messages, color indicators,
       and simple explanations, making it easy for farmers to understand what might
-      be happening in their grow rooms. This allows even new or small-scale growers
-      to respond quickly and confidently without needing deep technical knowledge.</p>
+      be happening in their grow rooms.</p>
     </div>
     <div class="feature-card">Feature 3</div>
   </section>
