--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <span class="small-title">Welcome To</span><br>
       <b>FreshSense</b>
     </h1>
-    <p>Smarter farming through the power of smell.</p>
+    <p><i>Smarter farming through the power of smell.</i></p>
     <button class="cta">Get Started</button>
   </header>
 
@@ -34,7 +34,12 @@
       and simple explanations, making it easy for farmers to understand what might
       be happening in their grow rooms.</p>
     </div>
-    <div class="feature-card">Feature 3</div>
+    <div class="feature-card"><b><h3>Real-Time Alerts Through a Mobile App</h3></b>
+    <p>FreshSense provides continuous, around-the-clock monitoring, ensuring that the
+      farm is being checked at all times, situations such as the farmer being away
+      or asleep.</p>
+    <p>The device works quietly in the background and requires very little maintenance, 
+      removing the need for constant manual checking.</p></div>
   </section>
 
   <section class="visual">
