--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       and simple explanations, making it easy for farmers to understand what might
       be happening in their grow rooms.</p>
     </div>
-    <div class="feature-card"><b><h3>Real-Time Alerts Through a Mobile App</h3></b>
+    <div class="feature-card"><b><h3>24/7 Automated Monitoring With Low Maintenance</h3></b>
     <p>FreshSense provides continuous, around-the-clock monitoring, ensuring that the
       farm is being checked at all times, situations such as the farmer being away
       or asleep.</p>
