--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </section>
 
   <footer>
-    <p>© 2025 My Company. All rights reserved.</p>
+    <p>© 2025 FreshSense. All rights reserved.</p>
   </footer>
 </body>
 </html>
