--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </section>
 
   <section class="visual">
-    <img src="path-to-image.jpg" alt="Product Preview">
+    <img src="Productbanner.png" alt="Product Banner">
   </section>
 
   <section class="info">
