--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
 
   <section class="info">
     <h2>Why Choose Us?</h2>
-    <p>Some information about benefits or details…</p>
+    <h3><b>Key Benefits of FreshSense</b></h3>
+    <ul>
+      <li>Prevents Crop Loss
+      <li>Mushroom contamination can destroy 30–70% of a harvest.</li>
+      <li>FreshSense detects early signs of mold, bacteria, or other issues before they spread.</li>
+      <li>Farmers can take corrective action immediately, saving most or all of their crops.</li>
+    </li>
+    </ul>
   </section>
 
   <section class="cta-final">
