--- a/index.html
+++ b/index.html
@@ -49,13 +49,19 @@
   <section class="info">
     <h2>Why Choose Us?</h2>
     <h3><b>Key Benefits of FreshSense</b></h3>
-    <ul>
-      <li>Prevents Crop Loss
-      <li>Mushroom contamination can destroy 30–70% of a harvest.</li>
-      <li>FreshSense detects early signs of mold, bacteria, or other issues before they spread.</li>
-      <li>Farmers can take corrective action immediately, saving most or all of their crops.</li>
-    </li>
-    </ul>
+    <ol>
+      <li>Prevents Crop Loss</li>
+      <ul>
+        <li>Mushroom contamination can destroy 30–70% of a harvest.</li>
+        <li>FreshSense detects early signs of mold, bacteria, or other issues before they spread.</li>
+        <li>Farmers can take corrective action immediately, saving most or all of their crops.</li>
+      </ul>
+      <li>Saves Money</li>
+      <ul>
+        <li>Avoids the costs associated with losing an entire harvest.</li>
+        <li>Reduces waste caused by spoiled mushrooms and unnecessary replacement of growing materials.</li>
+      </ul>
+    </ol>
   </section>
 
   <section class="cta-final">
