--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
   <section class="info">
     <h2>Why Choose Us?</h2>
+    <div class="info-card">
     <h3><b>Key Benefits of FreshSense</b></h3>
     <ol>
       <li>Prevents Crop Loss</li>
@@ -62,6 +63,7 @@
         <li>Reduces waste caused by spoiled mushrooms and unnecessary replacement of growing materials.</li>
       </ul>
     </ol>
+    </div>
   </section>
 
   <section class="cta-final">
