--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
       </ul>
     </ol>
     </div>
+    <div class="info-card">
+      <h3><b>Why FreshSense Is Important</b></h3>
+      <p>it gives mushroom farmers the ability to detect problems before they become visible or costly.
+      FreshSense solves the problem by continuously monitoring the air for subtle odors that indicate 
+        early signs of trouble, allowing farmers to take action immediately. 
+        By providing early warnings, reducing stress, saving money, and improving crop 
+        quality, FreshSense empowers farmers to maintain healthier, more productive farms and ensures 
+        greater consistency and reliability in their harvests.</p>
+    </div>
   </section>
 
   <section class="cta-final">
