--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <div class="info-card">
     <h3><b>Key Benefits of FreshSense</b></h3>
     <ol>
-      <li>Prevents Crop Loss</li>
+      <li><b>Prevents Crop Loss</b></li>
       <ul>
         <li>Mushroom contamination can destroy 30–70% of a harvest.</li>
         <li>FreshSense detects early signs of mold, bacteria, or other issues before they spread.</li>
         <li>Farmers can take corrective action immediately, saving most or all of their crops.</li>
       </ul>
-      <li>Saves Money</li>
+      <li><b>Saves Money</b></li>
       <ul>
         <li>Avoids the costs associated with losing an entire harvest.</li>
         <li>Reduces waste caused by spoiled mushrooms and unnecessary replacement of growing materials.</li>
