--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
     <div class="info-card">
     <h3><b>Key Benefits of FreshSense</b></h3>
     <ul>
-      <li><b>Prevents Crop Loss</b></li>
-      <li><b>Saves Money</b></li>
+      <li>Prevents Crop Loss</li>
+      <li>Saves Money</li>
+      <li>Reduces Stress</li>
+      <li>Improves Mushroom Quality</li>
+      <li>Accessible to All Farm Sizes</li>
     </ul>
     </div>
     <div class="info-card">
