--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </ul>
     </div>
     <div class="info-card">
-      <h3><b>Why FreshSense Is Important</b></h3>
+      <h3><b>FreshSense Is Important</b></h3>
       <p>it gives mushroom farmers the ability to detect problems before they become visible or costly.
       FreshSense solves the problem by continuously monitoring the air for subtle odors that indicate 
         early signs of trouble, allowing farmers to take action immediately. 
