--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <b>FreshSense</b>
     </h1>
     <p><i>Smarter farming through the power of smell.</i></p>
-    <button class="cta">Get Started</button>
+    <button class="cta">Start Now</button>
   </header>
 
   <section class="features">
@@ -70,11 +70,12 @@
   </section>
 
   <section class="cta-final">
-    <button class="cta">Sign Up Now</button>
+    <button class="cta">Interested? Inquire Now!</button>
   </section>
 
   <footer>
     <p>© 2025 FreshSense. All rights reserved.</p>
+    <p>Contact Us: (092)-5463-6427</p>
   </footer>
 </body>
 </html>
